# dino-platformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/engine/: assert.hpp  audio_mixer.cpp  audio_mixer.hpp  engine_context.cpp  engine_context.hpp  except.hpp  graphics_driver.cpp  graphics_driver.hpp  renderer.cpp  renderer.hpp  sprite_material.cpp  sprite_material.hpp
src/game/: main.cpp  platformer.cpp  platformer.hpp
src/platform/: filesystem.cpp  filesystem.hpp  logger.cpp  logger.hpp  standard.hpp  system_clock.cpp  system_clock.hpp
test/: CMakeLists.txt  driver_test.cpp
